deploy/moocstudio/moocstudio-opengauss-backend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: moocstudio-opengauss-backend
  name: moocstudio-opengauss-backend
