deploy/moocstudio/moocstudio-opengauss-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moocstudio-opengauss-backend
  namespace: moocstudio-opengauss-backend
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: moocstudio-opengauss-backend
  template:
    metadata:
      labels:
        app: moocstudio-opengauss-backend
    spec:
      containers:
      - name: moocstudio-opengauss-backend
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/opengauss/moocstudio-opengauss-backend:c65d179e48c8a5a8c3c0b3a77b202030138be3d9
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 1500m
            memory: 3000Mi
          limits:
            cpu: 1500m
            memory: 3000Mi
        volumeMounts:
          - mountPath: /opt/app/statisticslog
            name: static-log-data
      volumes:
      - name: static-log-data
        persistentVolumeClaim:
          claimName: cce-obs-opengauss-moocstudio
