deploy/moocstudio/moocstudio-opengauss-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moocstudio-opengauss-backend-service
  namespace: moocstudio-opengauss-backend
spec:
  ports:
    - name: http-port-1
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: moocstudio-opengauss-backend
  type: ClusterIP
